unpackaged/main/default/objects/CMPL123TMS__Training_Plan__c/CMPL123TMS__Training_Plan__c.object-meta.xml
<CustomObject>
    <description>Object connecting User Training Plan with Library</description>
    <label>Training Plan</label>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Training Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>