unpackaged/main/default/objects/CMPL123TMS__Training_Plan__c/fields/CMPL123TMS__Training_Plan_Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Training_Plan_Description__c</fullName>
        <label>Training Plan Description</label>
        <type>TextArea</type>
    </CustomField>