unpackaged/main/default/objects/CMPL123TMS__Training_Plan__c/fields/CMPL123TMS__Training_Plan_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Training_Plan_Type__c</fullName>
        <label>Training Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Organizational</fullName>
                </value>
                <value>
                    <fullName>Departmental</fullName>
                </value>
                <value>
                    <fullName>Job Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>