unpackaged/main/default/objects/CMPL123TMS__Training_Plan__c/listViews/CMPL123TMS__All.listView-meta.xml
<ListView>
        <fullName>CMPL123TMS__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123TMS__Training_Plan_Name__c</columns>
        <columns>CMPL123TMS__Training_Plan_Type__c</columns>
        <columns>CMPL123TMS__Training_Plan_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>